# llm-ocean-eval

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  eval.py  pyproject.toml  results_handler.py
configs/batches/: full_evaluation.yaml  minimal_eval.yaml  personality_eval.yaml
configs/models/: openai.yaml
docs/: initial-plan.md
prompts/: bfi_subset.txt
utils/: logging_config.py  models.py  results_handler.py  schemas.py  settings.py
